Nova rota address

--- a/backend/Requests.ipynb
+++ b/backend/Requests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "corresponding-sacrifice",
+   "id": "sexual-expense",
    "metadata": {},
    "source": [
     "### Examples of Requests"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preceding-gamma",
+   "id": "saved-brook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "skilled-management",
+   "id": "prompt-census",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "functional-diving",
+   "id": "personalized-institution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "appointed-hierarchy",
+   "id": "colored-reality",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Address\n",
+    "API_URL = 'http://localhost'\n",
+    "params = {}\n",
+    "req = requests.get(f\"{API_URL}:5000/store/{STORE_ID}/address\", headers = {'content-type': 'application/json'})\n",
+    "print(f\"Endereços {req.json()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "preceding-thomson",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "API_URL = 'http://localhost'\n",
+    "data = {\n",
+    "    'adress_country': 'ADDRESS',\n",
+    "    'adress_city': 'ADDRESS',\n",
+    "    'adress_borough': 'ADDRESS',\n",
+    "    'adress_street': 'ADDRESS'\n",
+    "}\n",
+    "req = requests.post(f\"{API_URL}:5000/store/{STORE_ID}/address\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
+    "print(f\"Foi criada a categoria {req.json()['name']} com o id {req.json()['id']}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "greek-flavor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get New Store information\n",
+    "API_URL = 'http://localhost'\n",
+    "params = {\n",
+    "    'email': 'airton',\n",
+    "    'password': 'neto'\n",
+    "}\n",
+    "req = requests.get(f\"{API_URL}:5000/store/login\", params = params, headers = {'content-type': 'application/json'})\n",
+    "print(f\"A autenticação foi realizada para a loja {req.json()['name']} com o id {STORE_ID}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "charming-equation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "engaged-orchestra",
+   "id": "configured-venue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "matched-minneapolis",
+   "id": "quality-shirt",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "green-sydney",
+   "id": "imposed-leonard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unique-example",
+   "id": "headed-definition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pleasant-medicine",
+   "id": "entire-recipe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recognized-iraqi",
+   "id": "binding-victoria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intended-marsh",
+   "id": "alert-trade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "owned-competition",
+   "id": "driven-jungle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "buried-bracket",
+   "id": "directed-piece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "patient-bernard",
+   "id": "celtic-competition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "considered-archive",
+   "id": "lesser-salmon",
    "metadata": {},
    "outputs": [],
    "source": [
