comandos de update

--- a/backend/Requests.ipynb
+++ b/backend/Requests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sexual-expense",
+   "id": "athletic-application",
    "metadata": {},
    "source": [
     "### Examples of Requests"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "saved-brook",
+   "id": "suited-bundle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prompt-census",
+   "id": "south-seven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "personalized-institution",
+   "id": "muslim-dress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "colored-reality",
+   "id": "brown-joseph",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preceding-thomson",
+   "id": "radical-industry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,13 +82,13 @@
     "    'adress_street': 'ADDRESS'\n",
     "}\n",
     "req = requests.post(f\"{API_URL}:5000/store/{STORE_ID}/address\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
-    "print(f\"Foi criada a categoria {req.json()['name']} com o id {req.json()['id']}\")\n"
+    "print(f\"Foi criada a categoria {req.json()['name']} com o id {req.json()['id']}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "greek-flavor",
+   "id": "touched-singing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "charming-equation",
+   "id": "missing-shock",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "configured-venue",
+   "id": "colonial-liechtenstein",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quality-shirt",
+   "id": "textile-confusion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "imposed-leonard",
+   "id": "nonprofit-farmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "headed-definition",
+   "id": "unauthorized-diana",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "API_URL = 'http://localhost'\n",
+    "data = {\n",
+    "    'category_id': CATEGORY_ID,\n",
+    "    'name': 'Calçados Nome Novo',\n",
+    "    'description': 'Tudo mais barato!'\n",
+    "}\n",
+    "req = requests.put(f\"{API_URL}:5000/store/{STORE_ID}/categories\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
+    "CATEGORY_ID = req.json()['id']\n",
+    "print(f\"Foi atualizada a categoria {req.json()['name']} com o id {req.json()['id']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "tamil-purse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "entire-recipe",
+   "id": "revolutionary-conflict",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +220,7 @@
     "    im_bytes = f.read()\n",
     "im_b64 = base64.b64encode(im_bytes).decode(\"utf8\")\n",
     "data = {\n",
-    "    'name': 'Chapeu',\n",
+    "    'name': 'Chapeu10',\n",
     "    'description': 'Esse é top hein!',\n",
     "    'price': 10,\n",
     "    'photo': im_b64,\n",
@@ -216,7 +234,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "binding-victoria",
+   "id": "funny-favor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import base64\n",
+    "import io\n",
+    "\n",
+    "API_URL = 'http://localhost'\n",
+    "with open('camiseta.png', 'rb') as f:\n",
+    "    im_bytes = f.read()\n",
+    "im_b64 = base64.b64encode(im_bytes).decode(\"utf8\")\n",
+    "data = {\n",
+    "    'product_id': PRODUCT_ID,\n",
+    "    'name': 'Chapeu Nome novo!',\n",
+    "    'description': 'Esse é top hein!',\n",
+    "    'price': 10,\n",
+    "    'photo': im_b64\n",
+    "}\n",
+    "req = requests.put(f\"{API_URL}:5000/store/{STORE_ID}/products\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
+    "PRODUCT_ID = req.json()['id']\n",
+    "print(f\"Foi atualizado o produto {req.json()['name']} com o id {req.json()['id']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "excited-clone",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alert-trade",
+   "id": "stock-absorption",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "driven-jungle",
+   "id": "arranged-matthew",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "directed-piece",
+   "id": "distributed-reproduction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "celtic-competition",
+   "id": "clear-graph",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lesser-salmon",
+   "id": "fuzzy-corporation",
    "metadata": {},
    "outputs": [],
    "source": [
