--- a/backend/Requests.ipynb
+++ b/backend/Requests.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "import requests\n",
+    "import requests\r\n",
     "import json"
    ],
    "outputs": [],
@@ -21,19 +21,19 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Create a New Store (Sign up)\n",
-    "API_URL = 'http://localhost'\n",
-    "data = {\n",
-    "    'name': 'Lojão do 12',\n",
-    "    'phone': '+5585996108737',\n",
-    "    'email': 'airton',\n",
-    "    'password': 'neto',\n",
-    "    'specialtys': ['Roupas'],\n",
-    "    'adress_country': 'Brazil',\n",
-    "    'adress_city': 'Fortaleza',\n",
-    "    'adress_borough': 'Joaquim Távora',\n",
-    "    'adress_street': 'Rua Visconde do Rio Branco 2955, APTO 202 A'\n",
-    "}\n",
+    "# Create a New Store (Sign up)\r\n",
+    "API_URL = 'http://localhost'\r\n",
+    "data = {\r\n",
+    "    'name': 'Lojão do 12',\r\n",
+    "    'phone': '+5585996108737',\r\n",
+    "    'email': 'airton',\r\n",
+    "    'password': 'neto',\r\n",
+    "    'specialtys': ['Roupas'],\r\n",
+    "    'adress_country': 'Brazil',\r\n",
+    "    'adress_city': 'Fortaleza',\r\n",
+    "    'adress_borough': 'Joaquim Távora',\r\n",
+    "    'adress_street': 'Rua Visconde do Rio Branco 2955, APTO 202 A'\r\n",
+    "}\r\n",
     "req = requests.post(f\"{API_URL}:5000/store/sign\", data = json.dumps(data), headers = {'content-type': 'application/json'})"
    ],
    "outputs": [],
@@ -43,7 +43,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "STORE_ID = req.json()['id']\n",
+    "STORE_ID = req.json()['id']\r\n",
     "print(f\"Foi criada a loja {req.json()['name']} com o id {req.json()['id']}\")"
    ],
    "outputs": [],
@@ -53,10 +53,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Address\n",
-    "API_URL = 'http://localhost'\n",
-    "params = {}\n",
-    "req = requests.get(f\"{API_URL}:5000/store/{STORE_ID}/address\", headers = {'content-type': 'application/json'})\n",
+    "# Address\r\n",
+    "API_URL = 'http://localhost'\r\n",
+    "params = {}\r\n",
+    "req = requests.get(f\"{API_URL}:5000/store/{STORE_ID}/address\", headers = {'content-type': 'application/json'})\r\n",
     "print(f\"Endereços {req.json()}\")"
    ],
    "outputs": [],
@@ -66,14 +66,14 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "API_URL = 'http://localhost'\n",
-    "data = {\n",
-    "    'adress_country': 'ADDRESS',\n",
-    "    'adress_city': 'ADDRESS',\n",
-    "    'adress_borough': 'ADDRESS',\n",
-    "    'adress_street': 'ADDRESS'\n",
-    "}\n",
-    "req = requests.post(f\"{API_URL}:5000/store/{STORE_ID}/address\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
+    "API_URL = 'http://localhost'\r\n",
+    "data = {\r\n",
+    "    'adress_country': 'ADDRESS',\r\n",
+    "    'adress_city': 'ADDRESS',\r\n",
+    "    'adress_borough': 'ADDRESS',\r\n",
+    "    'adress_street': 'ADDRESS'\r\n",
+    "}\r\n",
+    "req = requests.post(f\"{API_URL}:5000/store/{STORE_ID}/address\", data = json.dumps(data), headers = {'content-type': 'application/json'})\r\n",
     "print(f\"Foi criada a categoria {req.json()['name']} com o id {req.json()['id']}\")"
    ],
    "outputs": [],
@@ -83,13 +83,13 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Get New Store information\n",
-    "API_URL = 'http://localhost'\n",
-    "params = {\n",
-    "    'email': 'airton',\n",
-    "    'password': 'neto'\n",
-    "}\n",
-    "req = requests.get(f\"{API_URL}:5000/store/login\", params = params, headers = {'content-type': 'application/json'})\n",
+    "# Get New Store information\r\n",
+    "API_URL = 'http://localhost'\r\n",
+    "params = {\r\n",
+    "    'email': 'airton',\r\n",
+    "    'password': 'neto'\r\n",
+    "}\r\n",
+    "req = requests.get(f\"{API_URL}:5000/store/login\", params = params, headers = {'content-type': 'application/json'})\r\n",
     "print(f\"A autenticação foi realizada para a loja {req.json()['name']} com o id {STORE_ID}\")"
    ],
    "outputs": [],
@@ -99,13 +99,13 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Get New Store information\n",
-    "API_URL = 'http://localhost'\n",
-    "params = {\n",
-    "    'email': 'airton',\n",
-    "    'password': 'neto'\n",
-    "}\n",
-    "req = requests.get(f\"{API_URL}:5000/store/login\", params = params, headers = {'content-type': 'application/json'})\n",
+    "# Get New Store information\r\n",
+    "API_URL = 'http://localhost'\r\n",
+    "params = {\r\n",
+    "    'email': 'airton',\r\n",
+    "    'password': 'neto'\r\n",
+    "}\r\n",
+    "req = requests.get(f\"{API_URL}:5000/store/login\", params = params, headers = {'content-type': 'application/json'})\r\n",
     "print(f\"A autenticação foi realizada para a loja {req.json()['name']} com o id {req.json()['id']}\")"
    ],
    "outputs": [],
@@ -115,10 +115,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Categories\n",
-    "API_URL = 'http://localhost'\n",
-    "params = {}\n",
-    "req = requests.get(f\"{API_URL}:5000/store/{STORE_ID}/categories\", headers = {'content-type': 'application/json'})\n",
+    "# Categories\r\n",
+    "API_URL = 'http://localhost'\r\n",
+    "params = {}\r\n",
+    "req = requests.get(f\"{API_URL}:5000/store/{STORE_ID}/categories\", headers = {'content-type': 'application/json'})\r\n",
     "print(f\"Foram encontradas as categorias {req.json()}\")"
    ],
    "outputs": [],
@@ -128,19 +128,19 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "API_URL = 'http://localhost'\n",
-    "data = {\n",
-    "    'name': 'Roupas',\n",
-    "    'description': 'Tudo muito barato!'\n",
-    "}\n",
-    "req = requests.post(f\"{API_URL}:5000/store/{STORE_ID}/categories\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
-    "print(f\"Foi criada a categoria {req.json()['name']} com o id {req.json()['id']}\")\n",
-    "\n",
-    "API_URL = 'http://localhost'\n",
-    "data = {\n",
-    "    'category_id': req.json()['id']\n",
-    "}\n",
-    "req = requests.delete(f\"{API_URL}:5000/store/{STORE_ID}/categories\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
+    "API_URL = 'http://localhost'\r\n",
+    "data = {\r\n",
+    "    'name': 'Roupas',\r\n",
+    "    'description': 'Tudo muito barato!'\r\n",
+    "}\r\n",
+    "req = requests.post(f\"{API_URL}:5000/store/{STORE_ID}/categories\", data = json.dumps(data), headers = {'content-type': 'application/json'})\r\n",
+    "print(f\"Foi criada a categoria {req.json()['name']} com o id {req.json()['id']}\")\r\n",
+    "\r\n",
+    "API_URL = 'http://localhost'\r\n",
+    "data = {\r\n",
+    "    'category_id': req.json()['id']\r\n",
+    "}\r\n",
+    "req = requests.delete(f\"{API_URL}:5000/store/{STORE_ID}/categories\", data = json.dumps(data), headers = {'content-type': 'application/json'})\r\n",
     "print(f\"Foi deletada a categoria {req.json()['name']} com o id {req.json()['id']}\")"
    ],
    "outputs": [],
@@ -150,13 +150,13 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "API_URL = 'http://localhost'\n",
-    "data = {\n",
-    "    'name': 'Calçados',\n",
-    "    'description': 'Tudo mais barato!'\n",
-    "}\n",
-    "req = requests.post(f\"{API_URL}:5000/store/{STORE_ID}/categories\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
-    "CATEGORY_ID = req.json()['id']\n",
+    "API_URL = 'http://localhost'\r\n",
+    "data = {\r\n",
+    "    'name': 'Calçados',\r\n",
+    "    'description': 'Tudo mais barato!'\r\n",
+    "}\r\n",
+    "req = requests.post(f\"{API_URL}:5000/store/{STORE_ID}/categories\", data = json.dumps(data), headers = {'content-type': 'application/json'})\r\n",
+    "CATEGORY_ID = req.json()['id']\r\n",
     "print(f\"Foi criada a categoria {req.json()['name']} com o id {req.json()['id']}\")"
    ],
    "outputs": [],
@@ -166,14 +166,14 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "API_URL = 'http://localhost'\n",
-    "data = {\n",
-    "    'category_id': CATEGORY_ID,\n",
-    "    'name': 'Calçados Nome Novo',\n",
-    "    'description': 'Tudo mais barato!'\n",
-    "}\n",
-    "req = requests.put(f\"{API_URL}:5000/store/{STORE_ID}/categories\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
-    "CATEGORY_ID = req.json()['id']\n",
+    "API_URL = 'http://localhost'\r\n",
+    "data = {\r\n",
+    "    'category_id': CATEGORY_ID,\r\n",
+    "    'name': 'Calçados Nome Novo',\r\n",
+    "    'description': 'Tudo mais barato!'\r\n",
+    "}\r\n",
+    "req = requests.put(f\"{API_URL}:5000/store/{STORE_ID}/categories\", data = json.dumps(data), headers = {'content-type': 'application/json'})\r\n",
+    "CATEGORY_ID = req.json()['id']\r\n",
     "print(f\"Foi atualizada a categoria {req.json()['name']} com o id {req.json()['id']}\")"
    ],
    "outputs": [],
