Nova rota de payments

--- a/backend/Requests.ipynb
+++ b/backend/Requests.ipynb
@@ -2,24 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f625cf75",
+   "metadata": {},
    "source": [
     "### Examples of Requests"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ea9afbd6",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import requests\r\n",
     "import json"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bb24f32c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Create a New Store (Sign up)\r\n",
     "API_URL = 'http://localhost'\r\n",
@@ -35,36 +40,39 @@
     "    'adress_street': 'Rua Visconde do Rio Branco 2955, APTO 202 A'\r\n",
     "}\r\n",
     "req = requests.post(f\"{API_URL}:5000/store/sign\", data = json.dumps(data), headers = {'content-type': 'application/json'})"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "72b2121e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "STORE_ID = req.json()['id']\r\n",
     "print(f\"Foi criada a loja {req.json()['name']} com o id {req.json()['id']}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "25a501c4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Address\r\n",
     "API_URL = 'http://localhost'\r\n",
     "params = {}\r\n",
     "req = requests.get(f\"{API_URL}:5000/store/{STORE_ID}/address\", headers = {'content-type': 'application/json'})\r\n",
     "print(f\"Endereços {req.json()}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6da30fc6",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "API_URL = 'http://localhost'\r\n",
     "data = {\r\n",
@@ -75,13 +83,34 @@
     "}\r\n",
     "req = requests.post(f\"{API_URL}:5000/store/{STORE_ID}/address\", data = json.dumps(data), headers = {'content-type': 'application/json'})\r\n",
     "print(f\"Foi criada a categoria {req.json()['name']} com o id {req.json()['id']}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "14f2760f-ee5e-4945-be52-27c5a74ba48b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "API_URL = 'http://localhost'\n",
+    "data = {\n",
+    "    \"aceita_credito\": True,\n",
+    "    \"aceita_debito\": True,\n",
+    "    \"aceita_dinheiro\": True,\n",
+    "    \"aceita_pix\": True\n",
+    "}\n",
+    "req = requests.put(f\"{API_URL}:5000/store/{STORE_ID}/payment\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
+    "print(f\"Foi atualizada a forma de pagamento\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd921d20",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Get New Store information\r\n",
     "API_URL = 'http://localhost'\r\n",
@@ -91,13 +120,14 @@
     "}\r\n",
     "req = requests.get(f\"{API_URL}:5000/store/login\", params = params, headers = {'content-type': 'application/json'})\r\n",
     "print(f\"A autenticação foi realizada para a loja {req.json()['name']} com o id {STORE_ID}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d93d8ddc",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Get New Store information\r\n",
     "API_URL = 'http://localhost'\r\n",
@@ -107,26 +137,28 @@
     "}\r\n",
     "req = requests.get(f\"{API_URL}:5000/store/login\", params = params, headers = {'content-type': 'application/json'})\r\n",
     "print(f\"A autenticação foi realizada para a loja {req.json()['name']} com o id {req.json()['id']}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7beaa69d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Categories\r\n",
     "API_URL = 'http://localhost'\r\n",
     "params = {}\r\n",
     "req = requests.get(f\"{API_URL}:5000/store/{STORE_ID}/categories\", headers = {'content-type': 'application/json'})\r\n",
     "print(f\"Foram encontradas as categorias {req.json()}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "31f55c1d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "API_URL = 'http://localhost'\r\n",
     "data = {\r\n",
@@ -142,13 +174,14 @@
     "}\r\n",
     "req = requests.delete(f\"{API_URL}:5000/store/{STORE_ID}/categories\", data = json.dumps(data), headers = {'content-type': 'application/json'})\r\n",
     "print(f\"Foi deletada a categoria {req.json()['name']} com o id {req.json()['id']}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ebf7aebf",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "API_URL = 'http://localhost'\r\n",
     "data = {\r\n",
@@ -158,13 +191,14 @@
     "req = requests.post(f\"{API_URL}:5000/store/{STORE_ID}/categories\", data = json.dumps(data), headers = {'content-type': 'application/json'})\r\n",
     "CATEGORY_ID = req.json()['id']\r\n",
     "print(f\"Foi criada a categoria {req.json()['name']} com o id {req.json()['id']}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "960118e4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "API_URL = 'http://localhost'\r\n",
     "data = {\r\n",
@@ -175,26 +209,28 @@
     "req = requests.put(f\"{API_URL}:5000/store/{STORE_ID}/categories\", data = json.dumps(data), headers = {'content-type': 'application/json'})\r\n",
     "CATEGORY_ID = req.json()['id']\r\n",
     "print(f\"Foi atualizada a categoria {req.json()['name']} com o id {req.json()['id']}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ed77d789",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Product\n",
     "API_URL = 'http://localhost'\n",
     "params = {}\n",
     "req = requests.get(f\"{API_URL}:5000/store/{STORE_ID}/products\", headers = {'content-type': 'application/json'})\n",
     "print(f\"Foram encontrados os produtos {req.json()}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b51fcefe",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import base64\n",
     "import io\n",
@@ -213,13 +249,14 @@
     "req = requests.post(f\"{API_URL}:5000/store/{STORE_ID}/products\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
     "PRODUCT_ID = req.json()['id']\n",
     "print(f\"Foi criado o produto {req.json()['name']} com o id {req.json()['id']}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8206c755",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import base64\n",
     "import io\n",
@@ -238,13 +275,14 @@
     "req = requests.put(f\"{API_URL}:5000/store/{STORE_ID}/products\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
     "PRODUCT_ID = req.json()['id']\n",
     "print(f\"Foi atualizado o produto {req.json()['name']} com o id {req.json()['id']}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c2add6e1",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "API_URL = 'http://localhost'\n",
     "data = {\n",
@@ -252,26 +290,28 @@
     "}\n",
     "req = requests.delete(f\"{API_URL}:5000/store/{STORE_ID}/products\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
     "print(f\"Foi deletado o produto {req.json()['name']} com o id {req.json()['id']}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d71cfcc9",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Specialtys\n",
     "API_URL = 'http://localhost'\n",
     "params = {}\n",
     "req = requests.get(f\"{API_URL}:5000/store/{STORE_ID}/specialtys\", headers = {'content-type': 'application/json'})\n",
     "print(f\"Foram puxadas as especialidade {req.json()}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a385a039",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "API_URL = 'http://localhost'\n",
     "data = {\n",
@@ -279,26 +319,28 @@
     "}\n",
     "req = requests.put(f\"{API_URL}:5000/store/{STORE_ID}/specialtys\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
     "print(f\"Foram atualizadas as especialidades {req.json()}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e67eff5b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Schedules\n",
     "API_URL = 'http://localhost'\n",
     "params = {}\n",
     "req = requests.get(f\"{API_URL}:5000/store/{STORE_ID}/schedules\", headers = {'content-type': 'application/json'})\n",
     "print(f\"Foram puxados horarios {req.json()}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3ff353e4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "API_URL = 'http://localhost'\n",
     "data = {\n",
@@ -309,13 +351,14 @@
     "}\n",
     "req = requests.post(f\"{API_URL}:5000/store/{STORE_ID}/schedules\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
     "print(f\"Foi criado o horario {req.json()}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "028ced74",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "API_URL = 'http://localhost'\n",
     "data = {\n",
@@ -323,9 +366,7 @@
     "}\n",
     "req = requests.delete(f\"{API_URL}:5000/store/{STORE_ID}/schedules\", data = json.dumps(data), headers = {'content-type': 'application/json'})\n",
     "print(f\"Foi deletado o horario {req.json()}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
